Revert "Merge branch 'master' of https://github.com/LaYatiX/MiMServer"
This reverts commit dab08b2dbc800f8859c8072f5df8880070b1535f, reversing
changes made to 2ccb76ac4482a640c2aa3614eac7470373572b3c.

Revert merge to master

--- a/public/ajaxtest.html
+++ b/public/ajaxtest.html
@@ -19,7 +19,7 @@ function  sendData() {
         console.log(data);
         $.ajax({
             type: "POST", 
-            url: "http://pkprojectserver.hopto.org:8080/api/send",
+            url: "http://pkprojectserver.hopto.org:8080/api/send/index.php",
             data: {"data": data},
             dataType: "json",
             success: function (response) {
