--- a/public/websockettest.html
+++ b/public/websockettest.html
@@ -55,7 +55,7 @@
     
     <script>
         window.WebSocket = window.WebSocket || window.MozWebSocket;
-         var connection = new WebSocket("ws://pkprojectserver.hopto.org:1337");
+         var connection = new WebSocket("ws://localhost:1337");
          
          connection.onopen = function () {
              console.log('open');
@@ -70,11 +70,15 @@
                 input.value = "";
              }
          }
+         var old = 0;
          var content = document.getElementById("content");
          connection.onmessage = function (msg) {
              var p = document.createElement("p");
              p.appendChild(document.createTextNode(msg.data));
             content.appendChild(p);
+            // var newdate = new Date().valueOf();
+            // console.log(newdate-old);
+            // old = newdate;
          }
     </script>
 
