--- a/public/websockettest.html
+++ b/public/websockettest.html
@@ -55,7 +55,7 @@
     
     <script>
         window.WebSocket = window.WebSocket || window.MozWebSocket;
-         var connection = new WebSocket("ws://localhost:1337");
+         var connection = new WebSocket("ws://pkprojectserver.hopto.org:1337");
          
          connection.onopen = function () {
              console.log('open');
